--- a/src/components/base/Header/Header.module.scss
+++ b/src/components/base/Header/Header.module.scss
@@ -1,37 +1,95 @@
 @import '../../../styles/utils.scss';
+.header_wrapper {
+  width: 100%;
+  height: 4rem;
+  background-color: #0d47a1;
 
-.header {
-  background: $oc-gray-8;
-  height: 62px;
-
-  display: flex;
-  align-items: center;
-
-  .logo {
-    color: white;
-
-    font-weight: 800;
-    font-size: 1.5rem;
-
-    cursor: pointer;
-
-    margin-left: 1rem;
-
-    user-select: none;
-
-    img {
-      height: 2.5rem;
+  .header {
+    width: 70%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    > div {
+      display: flex;
+      align-items: center;
     }
   }
-
-  .logout {
-    margin-left: auto;
-    margin-right: 1rem;
-    color: white;
-
-    font-weight: 800;
-    font-size: 2rem;
-
-    cursor: pointer;
+}
+.logo {
+  display: flex;
+  align-items: center;
+  color: white;
+  font-size: 1.3rem;
+  width: 150px;
+  img {
+    height: 2.5rem;
   }
+  span {
+    margin-left: 3%;
+    font-family: 'Ubuntu', sans-serif;
+    &:hover {
+      color: #c5e6ef;
+    }
+  }
+}
+.search {
+  width: 250px;
+  margin-right: 2rem;
+  input {
+    background-color: lighten(#0d47a1, 6%);
+    border-color: lighten(#0d47a1, 6%);
+    padding-top: 0;
+    padding-bottom: 0;
+    line-height: 1.2rem;
+    &::placeholder {
+      color: darken(white, 10%);
+    }
+  }
+}
+.link {
+  a {
+    color: white;
+    span:hover {
+      color: #c5e6ef;
+    }
+  }
+  a + a {
+    margin-left: 1.5rem;
+  }
+}
+.dropdown {
+  summary {
+    outline: none;
+    font-size: 1.15em;
+  }
+  summary::-webkit-details-marker {
+    display: none;
+  }
+  span {
+    margin-left: 0.5rem;
+    border-bottom: 0 solid transparent;
+    border-left: 0.4rem solid transparent;
+    border-right: 0.4rem solid transparent;
+    border-top-style: solid;
+    border-top-width: 0.5rem;
+    content: '';
+    display: inline-block;
+    height: 0;
+    vertical-align: middle;
+    width: 0;
+  }
+}
+.dropdown + .dropdown {
+  margin-left: 1.5rem;
+}
+.logout {
+  margin-left: auto;
+  margin-right: 1rem;
+  color: white;
+
+  font-weight: 800;
+  font-size: 2rem;
+
+  cursor: pointer;
 }
