--- a/src/components/main/MainWrapper/MainWrapper.module.scss
+++ b/src/components/main/MainWrapper/MainWrapper.module.scss
@@ -1,23 +1,19 @@
 @import '../../../styles/utils.scss';
 
-$pannel_width: 350px;
-
 .main_wrapper {
   display: flex;
-  width: 100%;
-  height: 100vh;
-  .aside {
-    background-color: white;
-    width: $pannel_width;
-  }
+  justify-content: space-between;
 
-  .wall {
-    background-color: blue;
-    flex: 1;
-  }
-
-  .discover {
-    background-color: yellow;
-    width: $pannel_width;
-  }
+  height: 100%;
+  width: 1440px;
+  margin: 1rem auto;
+}
+section {
+  width: 65%;
+}
+aside {
+  position: sticky;
+  top: 1rem;
+  width: 30%;
+  height: inherit;
 }
