Set Absolute Sass path at 2019-03-29

--- a/src/components/auth/SocialLoginButton/SocialLoginButton.module.scss
+++ b/src/components/auth/SocialLoginButton/SocialLoginButton.module.scss
@@ -1,7 +1,8 @@
-@import '../../../styles/utils.scss';
+@import '~styles/utils.scss';
 
 .social_button {
   display: flex;
+  justify-content: center;
   align-items: center;
   padding: 1rem;
   color: white;
