--- a/src/components/base/Header/Header.module.scss
+++ b/src/components/base/Header/Header.module.scss
@@ -1,11 +1,12 @@
-@import '../../../styles/utils.scss';
+@import '~styles/utils.scss';
+
 .header_wrapper {
   width: 100%;
   height: 4rem;
   background-color: #0d47a1;
 
   .header {
-    width: 70%;
+    width: 1380px;
     height: 100%;
     margin: 0 auto;
     display: flex;
@@ -13,6 +14,9 @@
     > div {
       display: flex;
       align-items: center;
+    }
+    @include media('<wide') {
+      width: 95%;
     }
   }
 }
