--- a/src/components/main/MainWrapper/MainWrapper.module.scss
+++ b/src/components/main/MainWrapper/MainWrapper.module.scss
@@ -1,19 +1,31 @@
-@import '../../../styles/utils.scss';
+@import '~styles/utils.scss';
 
 .main_wrapper {
   display: flex;
   justify-content: space-between;
 
   height: 100%;
-  width: 1440px;
+  width: 1300px;
   margin: 1rem auto;
-}
-section {
-  width: 65%;
-}
-aside {
-  position: sticky;
-  top: 1rem;
-  width: 30%;
-  height: inherit;
+  @include media('<wide') {
+    justify-content: center;
+    width: 100%;
+  }
+
+  section {
+    width: 65%;
+    @include media('<wide') {
+      width: 90%;
+    }
+  }
+  aside {
+    display: block;
+    position: sticky;
+    top: 1rem;
+    width: 30%;
+    height: inherit;
+    @include media('<wide') {
+      display: none;
+    }
+  }
 }
