User Page; Overview at 2019-03-30

--- a/src/components/main/MainWrapper/MainWrapper.module.scss
+++ b/src/components/main/MainWrapper/MainWrapper.module.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
 
   height: 100%;
-  width: 1300px;
+  width: $app_width;
   margin: 1rem auto;
   @include media('<wide') {
     justify-content: center;
