--- a/src/components/base/Header/Header.module.scss
+++ b/src/components/base/Header/Header.module.scss
@@ -3,7 +3,7 @@
 .header_wrapper {
   width: 100%;
   height: 4rem;
-  background-color: #0d47a1;
+  background-color: $headerBGColor;
 
   .header {
     width: 1380px;
@@ -41,8 +41,8 @@
   width: 250px;
   margin-right: 2rem;
   input {
-    background-color: lighten(#0d47a1, 6%);
-    border-color: lighten(#0d47a1, 6%);
+    background-color: lighten(#2f4e73, 6%);
+    border-color: lighten(#2f4e73, 6%);
     padding-top: 0;
     padding-bottom: 0;
     line-height: 1.2rem;
