--- a/src/components/repository/Setting/Setting.module.scss
+++ b/src/components/repository/Setting/Setting.module.scss
@@ -10,13 +10,21 @@
     font-weight: 600;
     color: black !important;
     border-radius: 5px;
+    padding-top: 0;
+    padding-bottom: 0;
+    line-height: 1rem;
+    height: 2.5rem;
     margin: 0;
-    margin-top: 0.5rem;
+
+    margin-top: 1.2rem;
     &:not([disabled]):not(.disabled):active {
       background-color: lighten($gray, 0%) !important;
     }
   }
   > div {
+    display: flex;
+    align-items: center;
+    height: 100%;
     font-weight: 500;
   }
   > div + div {
@@ -29,13 +37,23 @@
   hr {
     border-color: $gray;
   }
-  input {
+  label {
+    height: 100%;
+    margin: 0;
+  }
+  input,
+  textarea {
     border-radius: 0.2rem;
     border: 1px solid lightgray;
     background-color: lighten($gray, 10%);
     line-height: 2rem;
     padding: 0 0.5rem;
     width: 20rem;
+    margin-top: 0.2rem;
+    margin-right: 5rem;
+  }
+  textarea {
+    width: 40rem;
   }
   .caution {
     color: darken(red, 10%) !important;
