--- a/src/components/user/Modify/Modify.module.scss
+++ b/src/components/user/Modify/Modify.module.scss
@@ -11,16 +11,17 @@
     color: black !important;
     border-radius: 5px;
     margin: 0;
-    margin-top: 0.5rem;
+    margin-top: 2.5rem;
     &:not([disabled]):not(.disabled):active {
       background-color: lighten($gray, 0%) !important;
     }
   }
-  > div {
+
+  .paragraph {
     font-weight: 500;
   }
-  > div + div {
-    margin-top: 1rem;
+  .paragraph + .paragraph {
+    margin-top: 2rem;
   }
   .title {
     font-size: 1.5rem;
@@ -29,7 +30,8 @@
   hr {
     border-color: $gray;
   }
-  input {
+  input,
+  textarea {
     border-radius: 0.2rem;
     border: 1px solid lightgray;
     background-color: lighten($gray, 10%);
@@ -42,5 +44,5 @@
   }
 }
 .section + .section {
-  margin-top: 3rem;
+  margin-top: 4rem;
 }
