Declare Mindmap Action at 2019-04-02

--- a/src/components/base/Header/Header.module.scss
+++ b/src/components/base/Header/Header.module.scss
@@ -3,7 +3,7 @@
 .header_wrapper {
   width: 100%;
   height: 4rem;
-  background-color: $headerBGColor;
+  background-color: #2f4e73;
 
   .header {
     width: 1380px;
