--- a/src/components/base/Dropdown/Dropdown.module.scss
+++ b/src/components/base/Dropdown/Dropdown.module.scss
@@ -1,28 +1,30 @@
+@import '~styles/utils.scss';
+
 .dropdown {
   summary {
     outline: none;
     font-size: 0.8em;
-    &::after {
-      margin-left: 0.5rem;
-      border-bottom: 0 solid transparent;
-      border-left: 0.3rem solid transparent;
-      border-right: 0.3rem solid transparent;
-      border-top-style: solid;
-      border-top-width: 0.4rem;
-      content: '';
-      display: inline-block;
-      height: 0;
-      vertical-align: middle;
-      width: 0;
-    }
   }
   summary::-webkit-details-marker {
     display: none;
   }
-
+  .carrot {
+    margin-left: 0.5rem;
+    border-bottom: 0 solid transparent;
+    border-left: 0.3rem solid transparent;
+    border-right: 0.3rem solid transparent;
+    border-top-style: solid;
+    border-top-width: 0.4rem;
+    content: '';
+    display: inline-block;
+    height: 0;
+    vertical-align: middle;
+    width: 0;
+  }
   .wrapper {
     position: absolute;
     top: 55px;
+    right: auto;
     &::before {
       border-top: 0 solid transparent;
       border-left: 0.6rem solid transparent;
@@ -32,8 +34,6 @@
       content: '';
       display: inline-block;
       vertical-align: middle;
-      height: 0;
-      width: 0;
       position: absolute;
       top: -8px;
     }
@@ -41,11 +41,10 @@
       padding: 5px 0;
       position: relative;
       z-index: 999;
-      box-shadow: 0 3px 12px rgba(27, 31, 35, 0.15);
+      box-shadow: $shadow6dp;
       border-radius: 5px;
       background-color: #fff;
       color: black;
-      right: 80%;
       font-size: 0.9rem;
       div {
         padding: 0.3rem 0.5rem;
@@ -57,6 +56,9 @@
       .item:hover {
         background-color: #4285f4;
         color: white;
+      }
+      .head {
+        color: darken($gray, 15%);
       }
       hr {
         margin: 0.3rem;
