--- a/src/components/base/Dropdown/Dropdown.module.scss
+++ b/src/components/base/Dropdown/Dropdown.module.scss
@@ -54,7 +54,7 @@
         color: black;
       }
       .item:hover {
-        background-color: #4285f4;
+        background-color: $primary;
         color: white;
       }
       .head {
