--- a/src/components/main/Discover/Discover.module.scss
+++ b/src/components/main/Discover/Discover.module.scss
@@ -1,18 +1,35 @@
 @import '~styles/utils.scss';
 
-.friendRec {
-  width: 100%;
-  -webkit-box-shadow: 3px 4px 10px -1px rgba(168, 168, 168, 0.5);
-  -moz-box-shadow: 3px 4px 10px -1px rgba(168, 168, 168, 0.5);
-  box-shadow: 3px 4px 10px -1px rgba(168, 168, 168, 0.5);
-
-  img {
-    margin-right: 3%;
-    padding: 3%;
-    width: 18%;
-    float: left;
-    background-color: #99bddc;
+.discover {
+  font-size: 0.9rem;
+  span {
+    font-weight: 500;
   }
+  .repoList {
+    margin: 1rem 0;
+  }
+  a {
+    color: black;
+    font-weight: 500;
+  }
+}
+.repo {
+  padding: 0.5rem 0;
+  width: 100%;
+  .desc {
+    margin: 0.5rem 0;
+  }
+  .properties {
+    span {
+      font-weight: 300;
+    }
+    span + span {
+      margin-left: 0.5rem;
+    }
+  }
+}
+.repo + .repo {
+  border-top: 1px solid $gray;
 }
 
 .friendRec + .friendRec {
