--- a/src/components/user/Header/Header.module.scss
+++ b/src/components/user/Header/Header.module.scss
@@ -60,7 +60,6 @@ $navHeight: 60px;
   font-size: 1.1rem;
 }
 .userNavWrapper {
-  box-sizing: border-box;
   position: sticky;
   z-index: 900;
   top: 0;
@@ -81,26 +80,25 @@ $navHeight: 60px;
   height: 100%;
 }
 .userNav {
-  box-sizing: border-box;
   left: $image_maxsize;
   display: flex;
   width: 500px;
   height: 100%;
   font-size: 1.1rem;
-  justify-content: space-between;
   a {
     color: black;
 
+    line-height: $navHeight;
+    height: 100;
+
+    padding: 0 1rem;
     &:hover {
       color: black;
       text-decoration: none;
       border-bottom: 3px solid darken($gray, 20%);
     }
   }
-  a div {
-    line-height: $navHeight;
-    height: 100;
-
-    padding: 0 15%;
+  a + a {
+    margin-left: 1rem;
   }
 }
