--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -12,6 +12,7 @@ $app_width: 1300px;
 
 $gray: #dadce0;
 $headerBGColor: #2f4e73;
+$primary: #4285f4;
 
 $shadow2dp: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12),
   0 3px 1px -2px rgba(0, 0, 0, 0.2);
