--- a/src/components/base/Header/Header.module.scss
+++ b/src/components/base/Header/Header.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 4rem;
   background-color: #2f4e73;
-
+  box-shadow: $shadow2dp;
   .header {
     width: 1380px;
     height: 100%;
