--- a/src/components/main/Repository/Repository.module.scss
+++ b/src/components/main/Repository/Repository.module.scss
@@ -1,22 +1,39 @@
 @import '~styles/utils.scss';
+.repository {
+  ::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+    border-radius: 4px;
+    background: #fafafa;
+    transition: all 0.3s ease;
+  }
+  ::-webkit-scrollbar:hover {
+    background: linear-gradient(0.25turn, #fafafa, #c6c7ca, #fafafa);
+  }
 
+  ::-webkit-scrollbar-thumb {
+    background: lighten(#777779, 5%);
+    border-radius: 4px;
+  }
+}
 .header {
-  margin-bottom: 3%;
+  margin-bottom: 20px;
   display: flex;
   height: 3rem;
   justify-content: space-between;
   align-items: center;
   > div {
-    width: 60%;
+    flex: 1;
     display: flex;
   }
   select {
-    width: 40%;
+    min-width: 150px;
+    max-width: 20%;
     border-radius: 0.2rem;
   }
   input {
-    width: 60%;
-    margin-right: 4rem;
+    max-width: 60%;
+    min-width: 200px;
   }
   span {
     margin: 0 20px;
@@ -31,55 +48,63 @@
 
 .idealist {
   width: 100%;
-  height: 260px;
-
-  display: flex;
+  height: 250px;
   > div {
     display: flex;
-    padding-left: 20px;
     width: 100%;
-    background: lightblue;
+    height: 100%;
+    padding: 20px 5px;
     overflow-x: scroll;
+  }
+  .moreRepository {
+    min-width: 240px;
+    font-size: 0.95rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    i {
+      margin-right: 0.5rem;
+    }
   }
 }
 
 .ideabox {
-  flex: 0 0 auto;
-  min-width: 260px;
-  height: 240px;
-  padding: 20px 0;
+  min-width: 240px;
+  height: 100%;
+  box-shadow: $shadow2dp;
   .ideaimg {
     position: relative;
     background-color: white;
     width: 240px;
-    height: 200px;
+    height: 100%;
     z-index: 0;
   }
   .ideahov {
     opacity: 0;
     position: relative;
     display: flex;
+    top: -200px;
 
     width: 240px;
-    height: 200px;
-    top: -200px;
+    height: 100%;
     justify-content: center;
     align-items: center;
     z-index: 1;
+    &:hover {
+      opacity: 0.7;
+      background-color: black;
+    }
+    a {
+      color: white;
+      &:hover {
+        color: #c5e6ef;
+      }
+    }
+    > div + div {
+      margin-left: 25px;
+    }
   }
-
-  .ideahov:hover {
-    opacity: 0.5;
-    background-color: #99bddc;
-  }
-  .ideahov .hovlink {
-    color: white;
-  }
-  .ideahov .hovlink:hover {
-    text-decoration: none;
-    color: #c5e6ef;
-  }
-  .ideaopen {
-    margin-right: 12%;
-  }
+}
+.ideabox + .ideabox {
+  margin-left: 20px;
 }
