--- a/src/components/explore/ExploreWrapper/ExploreWrapper.module.scss
+++ b/src/components/explore/ExploreWrapper/ExploreWrapper.module.scss
@@ -1,32 +1,81 @@
 @import '~styles/utils.scss';
 
+$height: 20rem;
+
 .explore {
+  width: 100%;
+}
+
+.newsWrapper {
+  width: 100%;
+  height: 22rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: lighten($headerBGColor, 10%);
+}
+
+.newsList {
+  display: flex;
+  width: $app_width;
+  height: 20rem;
+  justify-content: space-between;
+
+  > div {
+    background-color: black;
+    box-shadow: $shadow2dp;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    transform: scale(1);
+    transition: transform 0.35s;
+    &:hover {
+      transform: scale(1.04);
+    }
+    img {
+      width: 100%;
+    }
+  }
+  > div + div {
+    margin-left: 1rem;
+  }
+  .label {
+    position: absolute;
+    height: 60%;
+    top: 40%;
+    color: white;
+    font-size: 1.3rem;
+    width: 100%;
+    padding: 0 1rem;
+    padding-top: 18%;
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1) 70%);
+  }
+
+  .newsMain {
+    flex: 3;
+
+    .label {
+      display: flex;
+    }
+    span {
+      width: 100%;
+      text-align: center;
+    }
+  }
+
+  .newsSide {
+    flex: 2;
+
+    .label {
+      position: absolute;
+      top: 30%;
+      height: 70%;
+      padding-top: 30%;
+      background: linear-gradient(rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 1) 60%);
+    }
+  }
+}
+
+.listWrapper {
   width: $app_width;
   margin: 3rem auto;
-}
-
-.squareList {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  margin-bottom: 2%;
-}
-
-.squareFirst {
-  width: 26%;
-  height: 100px;
-  margin-right: 1%;
-  background-color: #f2f9f8;
-  height: 300px;
-}
-
-.squareSecond {
-  width: 40%;
-  margin-right: 1%;
-  background-color: #f2f9f8;
-}
-
-.squareThird {
-  width: 26%;
-  background-color: #f2f9f8;
 }
