User Modify Page & Main Page API at 2019-04-09

--- a/src/components/base/Header/Header.module.scss
+++ b/src/components/base/Header/Header.module.scss
@@ -60,6 +60,8 @@
       color: black;
       border-bottom-right-radius: 0;
       border-bottom-left-radius: 0;
+      border: none;
+      box-shadow: $shadow6dp;
     }
   }
   input:focus + .searchResult {
