--- a/src/components/explore/ExploreWrapper/ExploreWrapper.module.scss
+++ b/src/components/explore/ExploreWrapper/ExploreWrapper.module.scss
@@ -27,7 +27,7 @@ $height: 20rem;
     border-radius: 0.5rem;
     overflow: hidden;
     transform: scale(1);
-    transition: transform 0.35s;
+    transition: all 0.35s;
     &:hover {
       transform: scale(1.04);
     }
