--- a/src/components/main/Discover/Discover.module.scss
+++ b/src/components/main/Discover/Discover.module.scss
@@ -5,12 +5,16 @@
   span {
     font-weight: 500;
   }
+  a {
+    font-weight: 500;
+    color: black;
+  }
   .repoList {
     margin: 1rem 0;
   }
-  a {
-    color: black;
+  .path {
     font-weight: 500;
+    font-size: 0.95rem;
   }
 }
 .repo {
@@ -18,13 +22,20 @@
   width: 100%;
   .desc {
     margin: 0.5rem 0;
+    font-weight: 300;
   }
   .properties {
+    display: flex;
+    i {
+      margin-right: 0.3rem;
+    }
     span {
-      font-weight: 300;
+      display: flex;
+      align-items: center;
+      font-weight: 400;
     }
     span + span {
-      margin-left: 0.5rem;
+      margin-left: 1rem;
     }
   }
 }
