--- a/src/components/main/Wall/Wall.module.scss
+++ b/src/components/main/Wall/Wall.module.scss
@@ -19,9 +19,7 @@ $spaceImgToActivity: 1rem;
     align-items: center;
     width: 100%;
     .img {
-      width: 32px;
-      height: 32px;
-      background-color: gray;
+      @include avartar;
     }
     .activity {
       margin: 0 $spaceImgToActivity;
