--- a/src/components/user/Modify/Modify.module.scss
+++ b/src/components/user/Modify/Modify.module.scss
@@ -16,11 +16,31 @@
       background-color: lighten($gray, 0%) !important;
     }
   }
-
-  .paragraph {
-    font-weight: 500;
+  .submit {
+    margin: 2rem 0;
+    button {
+      color: white !important;
+      background-color: lighten($primary, 0%) !important;
+      &:not([disabled]):not(.disabled):active {
+        background-color: darken($primary, 20%) !important;
+      }
+    }
   }
-  .paragraph + .paragraph {
+  .paragraphWrapper {
+    display: flex;
+    justify-content: space-between;
+    > div {
+      width: 48%;
+    }
+  }
+  .item {
+    font-weight: 500;
+    button {
+      width: 225px;
+      margin: 0.5rem 0;
+    }
+  }
+  .item + .item {
     margin-top: 2rem;
   }
   .title {
@@ -45,4 +65,36 @@
 }
 .section + .section {
   margin-top: 4rem;
+}
+
+.colorPicker {
+  position: absolute;
+  z-index: 2;
+  .cover {
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+  }
+}
+
+.cropper {
+  width: 100%;
+  height: 225px;
+  .controls {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-top: 0.5rem;
+    input {
+      flex: 1;
+    }
+    button {
+      padding: 0.7rem 0;
+      margin-left: 0.7rem;
+      width: 100px;
+      border-radius: 10px;
+    }
+  }
 }
