--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -1,18 +1,32 @@
 @import '~open-color/open-color';
 @import '~include-media/dist/include-media';
 
+@mixin avartar {
+  border-radius: 3px;
+  border: 1px solid #dadce0;
+  width: 40px;
+  height: 40px;
+  background-color: gray;
+}
+
+$app_width: 1300px;
+$gray: #dadce0;
+$headerBGColor: #2f4e73;
+$primary: #4285f4;
+
+$SOCIETY_COLOR: #8854d0;
+$IT_COLOR: #4b6584;
+$SPORT_COLOR: #20bf6b;
+$LIFE_COLOR: #f7b731;
+$POLITICS_COLOR: #eb3b5a;
+$ECONOMY_COLOR: #3867d6;
+
 $breakpoints: (
   small: 320px,
   medium: 768px,
   large: 1024px,
   wide: 1400px,
 );
-
-$app_width: 1300px;
-
-$gray: #dadce0;
-$headerBGColor: #2f4e73;
-$primary: #4285f4;
 
 $shadow2dp: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12),
   0 3px 1px -2px rgba(0, 0, 0, 0.2);
