Mobile env Styling Check Point at 2019-04-10

--- a/src/components/explore/ExploreWrapper/ExploreWrapper.module.scss
+++ b/src/components/explore/ExploreWrapper/ExploreWrapper.module.scss
@@ -17,7 +17,7 @@ $height: 20rem;
 
 .newsList {
   display: flex;
-  width: $app_width;
+  max-width: $app_width;
   height: 20rem;
   justify-content: space-between;
 
@@ -76,6 +76,6 @@ $height: 20rem;
 }
 
 .listWrapper {
-  width: $app_width;
+  max-width: $app_width;
   margin: 3rem auto;
 }
