Repositories CRUD at 2019-04-13

--- a/src/components/repository/Setting/Setting.module.scss
+++ b/src/components/repository/Setting/Setting.module.scss
@@ -21,6 +21,9 @@
       background-color: lighten($gray, 0%) !important;
     }
   }
+  .input + .input {
+    margin-top: 1rem;
+  }
   > div {
     font-weight: 500;
   }
