--- a/src/components/main/Repository/Repository.module.scss
+++ b/src/components/main/Repository/Repository.module.scss
@@ -80,28 +80,61 @@
     z-index: 0;
   }
   .ideahov {
-    opacity: 0;
     position: relative;
-    display: flex;
     top: -200px;
-
     width: 240px;
     height: 100%;
-    justify-content: center;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     z-index: 1;
-    &:hover {
-      opacity: 0.7;
-      background-color: black;
-    }
-    a {
-      color: white;
-      &:hover {
-        color: #c5e6ef;
+    .idealabel {
+      background-color: $gray;
+      height: 3.4rem;
+      padding: 1rem;
+
+      .title {
+        font-weight: 400;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        word-wrap: normal;
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        opacity: 1;
+        overflow: hidden;
+        top: 0;
+        transition: all 300ms;
+      }
+      .options {
+        justify-content: space-around;
+        display: flex;
+        position: relative;
+        opacity: 0;
+        top: 0;
+        transition: all 300ms;
+        .box {
+          background-color: gray;
+          border-radius: 5px;
+          color: white;
+        }
+        a {
+          color: gray;
+          font-weight: 500;
+          display: inline-block;
+          padding: 0.5rem 1.5rem;
+        }
       }
     }
-    > div + div {
-      margin-left: 25px;
+    &:hover {
+      .title {
+        opacity: 0;
+        top: -1rem;
+      }
+      .options {
+        opacity: 1;
+        top: -2rem;
+      }
     }
   }
 }
