--- a/src/components/mindmap/Footer/Footer.module.scss
+++ b/src/components/mindmap/Footer/Footer.module.scss
@@ -27,6 +27,11 @@
   }
 }
 .brainRightFooter {
+  > div {
+    @include media('<medium') {
+      display: none;
+    }
+  }
   > div + div {
     margin-left: 10px;
   }
