--- a/src/components/search/SearchWrapper/SearchWrapper.module.scss
+++ b/src/components/search/SearchWrapper/SearchWrapper.module.scss
@@ -6,4 +6,10 @@
   margin: 0 auto;
   margin-top: 3rem;
   display: flex;
+  @include media('<medium') {
+    max-width: 768px;
+    margin-top: 2rem;
+    width: 95%;
+    display: block;
+  }
 }
