--- a/src/components/main/Repository/Repository.module.scss
+++ b/src/components/main/Repository/Repository.module.scss
@@ -30,19 +30,57 @@
     min-width: 150px;
     max-width: 20%;
     border-radius: 0.2rem;
+    @include media('<medium') {
+      border-radius: 0.2rem;
+      min-width: 80px;
+      max-width: 20%;
+    }
+    @media (max-width: 325px) {
+      min-width: 70px;
+    }
   }
   input {
     max-width: 60%;
     min-width: 200px;
+    margin-right: 6%;
+    @media (max-width: 1192px) {
+      margin-right: 3%;
+    }
+    @media (max-width: 984px) {
+      margin-right: 0.5%;
+    }
+    @include media('<medium') {
+      max-width: 60%;
+      margin-right: 6%;
+      min-width: 150px;
+    }
+    @media (max-width: 325px) {
+      min-width: 100px;
+    }
   }
   span {
     margin: 0 20px;
-    font-size: 24px;
+    font-size: 1.5rem;
+    @include media('<medium') {
+      margin: 0 15px;
+    }
   }
   button {
     border-radius: 5px;
     line-height: 1rem;
     margin: 0;
+    > div {
+      display: inline;
+      @include media('<medium') {
+        display: none;
+      }
+    }
+    @include media('<medium') {
+      line-height: 0.5rem;
+      max-width: 100%;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
   }
 }
 
@@ -55,6 +93,7 @@
     height: 100%;
     padding: 20px 5px;
     overflow-x: scroll;
+    overflow-y: hidden;
   }
   .moreRepository {
     min-width: 240px;
