--- a/src/components/repository/Header/Header.module.scss
+++ b/src/components/repository/Header/Header.module.scss
@@ -14,6 +14,9 @@ $navHeight: 40px;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
+    @include media('<medium') {
+      max-width: 90%;
+    }
   }
 }
 
