--- a/src/components/repository/Overview/Overview.module.scss
+++ b/src/components/repository/Overview/Overview.module.scss
@@ -20,11 +20,17 @@
 .sketchInfor {
   width: 70%;
   margin-bottom: 1%;
+  @include media('<medium') {
+    width: 100%;
+  }
 }
 .sketchAll .btn-primary {
   margin-top: 1%;
   float: right;
   width: 15%;
+}
+.sketchAll button {
+  margin: 5% 0;
 }
 .btn-primary,
 .btn-primary:active,
@@ -38,11 +44,11 @@
 }
 
 .similarSketch {
-  margin-top: 5%;
+  margin-top: 10%;
 }
 
-.similarSketch h6 {
-  margin-bottom: 2%;
+.similarSketch h5 {
+  margin-bottom: 3%;
 }
 
 .sketchList {
@@ -55,13 +61,17 @@
 }
 
 .sketchBox {
-  margin: 1%;
+  margin-right: 2%;
   width: 15%;
   line-height: 3.5;
   display: flex;
   flex-direction: column;
   text-align: center;
   background-color: white;
+  @include media('<medium') {
+    height: 90px;
+    width: 90px;
+  }
 }
 
 .sketchHov {
