--- a/src/components/repository/RepositoryWrapper/RepositoryWrapper.module.scss
+++ b/src/components/repository/RepositoryWrapper/RepositoryWrapper.module.scss
@@ -5,4 +5,8 @@
   width: 100%;
   margin: 0 auto;
   margin-top: 6rem;
+  @include media('<medium') {
+    max-width: 90%;
+    margin-top: 2rem;
+  }
 }
