--- a/src/components/user/Repositories/Repositories.module.scss
+++ b/src/components/user/Repositories/Repositories.module.scss
@@ -1,17 +1,28 @@
 @import '~styles/utils.scss';
+
 .repositories {
   display: flex;
+  @include media('<medium') {
+    display: block;
+    margin-top: 5%;
+  }
 }
 
 .repoCategory {
   width: 300px;
   margin-right: 5%;
+  @include media('<medium') {
+    margin-bottom: 10%;
+  }
   > div {
     width: 100%;
     height: 3rem;
     border-bottom: 2px solid $gray;
     margin-bottom: 1.5rem;
     padding-left: 0.5rem;
+    @include media('<medium') {
+      border-bottom: 1px solid $gray;
+    }
   }
   ul {
     padding: 0;
@@ -28,6 +39,10 @@
   width: 100%;
   height: 3rem;
   margin-bottom: 2rem;
+  @include media('<medium') {
+    margin-bottom: 1rem;
+    height: 2rem;
+  }
   input {
     margin: 0 2rem;
     flex: 1;
@@ -36,11 +51,17 @@
     background-color: lighten($gray, 10%);
     padding: 0 0.5rem;
     width: 20rem;
+    @include media('<medium') {
+      margin: 0;
+    }
   }
   button {
     margin: 0;
     height: 100%;
     padding: 0 2rem;
     border-radius: 5px;
+    @include media('<medium') {
+      display: none;
+    }
   }
 }
