--- a/src/components/mindmap/Footer/Footer.module.scss
+++ b/src/components/mindmap/Footer/Footer.module.scss
@@ -1,13 +1,25 @@
 @import '~styles/utils.scss';
 
+.brainFooterWrapper {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  .brainStatus {
+    width: 10%;
+    background-color: transparent;
+    margin-right: 3%;
+  }
+}
+
 .brainFooter {
   width: 100%;
   padding: 0 3%;
   height: 3.5rem;
   background-color: #2f4e73;
-  position: absolute;
-  bottom: 0;
-  z-index: 999;
   display: flex;
   justify-content: space-between;
   color: white;
