--- a/src/components/mindmap/Node/Editor/Editor.module.scss
+++ b/src/components/mindmap/Node/Editor/Editor.module.scss
@@ -4,7 +4,10 @@
   justify-content: center;
   border-radius: 10px;
   background-color: white;
-  user-select: "none";
+  user-select: 'none';
+
+  resize: both;
+  overflow: auto;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12),
     0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
@@ -14,7 +17,6 @@
   padding: 0.5em;
   max-width: 336px;
   text-align: center;
-
   &:read-write:focus {
     outline: none;
   }
