--- a/src/components/explore/Item/Item.module.scss
+++ b/src/components/explore/Item/Item.module.scss
@@ -1,15 +1,77 @@
 @import '~styles/utils.scss';
 
-$spaceImgToActivity: 1rem;
-
 .item {
-  width: 15%;
-  padding: 1%;
-  margin-left: 1%;
-  margin-right: 2%;
-  background-color: white;
-  background-color: white;
-  -webkit-box-shadow: 0px 4px 10px -1px rgba(68, 68, 68, 0.5);
-  -moz-box-shadow: 0px 4px 10px -1px rgba(68, 68, 68, 0.5);
-  box-shadow: 0px 4px 10px -1px rgba(68, 68, 68, 0.5);
+  min-width: 240px;
+  height: 100%;
+  box-shadow: $shadow2dp;
+
+  .ideaimg {
+    position: relative;
+    background-color: white;
+    width: 240px;
+    height: 100%;
+    z-index: 0;
+  }
+  .ideahov {
+    position: relative;
+    top: -200px;
+    width: 240px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    z-index: 1;
+    .idealabel {
+      background-color: $gray;
+      height: 3.4rem;
+      padding: 1rem;
+
+      .title {
+        font-weight: 400;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        word-wrap: normal;
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        opacity: 1;
+        overflow: hidden;
+        top: 0;
+        transition: all 300ms;
+      }
+      .options {
+        justify-content: space-around;
+        display: flex;
+        position: relative;
+        opacity: 0;
+        top: 0;
+        transition: all 300ms;
+        .box {
+          background-color: gray;
+          border-radius: 5px;
+          color: white;
+        }
+        a {
+          color: gray;
+          font-weight: 500;
+          display: inline-block;
+          padding: 0.5rem 1.5rem;
+        }
+      }
+    }
+    &:hover {
+      .title {
+        opacity: 0;
+        top: -1rem;
+      }
+      .options {
+        opacity: 1;
+        top: -2rem;
+      }
+    }
+  }
+}
+
+.item + .item {
+  margin-left: 20px;
 }
