--- a/src/components/explore/List/List.module.scss
+++ b/src/components/explore/List/List.module.scss
@@ -1,13 +1,33 @@
 @import '~styles/utils.scss';
 
-$spaceImgToActivity: 1rem;
-
 .list {
-  width: 95%;
-  padding-top: 1%;
-  padding-bottom: 1%;
-  margin-bottom: 2%;
-  display: flex;
-  flex-direction: row;
-  overflow-x: scroll;
+  width: 100%;
+  height: 250px;
+  ::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+    border-radius: 4px;
+    background: #fafafa;
+    transition: all 0.3s ease;
+  }
+  ::-webkit-scrollbar:hover {
+    background: linear-gradient(0.25turn, #fafafa, #c6c7ca, #fafafa);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: lighten(#777779, 5%);
+    border-radius: 4px;
+  }
+  > div {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding: 20px 5px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+}
+
+.list + .list {
+  margin-top: 4rem;
 }
