--- a/src/components/repository/Overview/Overview.module.scss
+++ b/src/components/repository/Overview/Overview.module.scss
@@ -1,96 +1,168 @@
 @import '~styles/utils.scss';
 
-/* sketch */
-.sketchScreen {
-  border: 1px solid black;
-  width: 100%;
-  height: 400px;
-  text-align: center;
-  margin-bottom: 2%;
-}
-
-/*
-.sketchLikes {
-  float: right;
-}
-*/
-.sketchAll {
-  width: 100%;
-}
-.sketchInfor {
-  width: 70%;
-  margin-bottom: 1%;
-  @include media('<medium') {
-    width: 100%;
+.repositoryWrapper {
+  > div + div {
+    margin-top: 2rem;
+  }
+  > div {
+    > span {
+      font-size: 1.2rem;
+      font-weight: 500;
+    }
   }
 }
-.sketchAll .btn-primary {
-  margin-top: 1%;
-  float: right;
-  width: 15%;
+
+.intro {
+  width: 100%;
+  margin-bottom: 2rem;
+  display: flex;
+  > div {
+    flex: 1;
+  }
 }
-.sketchAll button {
-  margin: 5% 0;
-}
-.btn-primary,
-.btn-primary:active,
-.btn-primary:visited {
-  background-color: #99bddc !important;
-  border: none !important;
-}
-.btn-primary:hover {
-  background-color: #baabcf !important;
-  border: none !important;
+.info {
+  width: 100%;
+  .tendency {
+    border: 1px solid $gray;
+    border-radius: 5px;
+    margin-bottom: 2rem;
+    padding: 0.3rem;
+    display: flex;
+    justify-content: space-around;
+    .category {
+      display: flex;
+      align-items: center;
+      > span {
+        margin-left: 0.3rem;
+      }
+      .label {
+        font-weight: 500;
+      }
+      .ratio {
+        font-size: 0.95rem;
+      }
+    }
+  }
 }
 
-.similarSketch {
+/* sketch */
+.repoScreen {
+  border: 1px solid $gray;
+  border-radius: 5px;
+  width: 100%;
+  height: 400px;
+  text-align: end;
+  a {
+    position: relative;
+    left: 0;
+    bottom: 0;
+  }
+  button {
+    color: white !important;
+    background-color: lighten(rgba(0, 0, 0, 0.7), 0%) !important;
+    &:not([disabled]):not(.disabled):active {
+      background-color: darken(rgba(0, 0, 0, 0.7), 20%) !important;
+    }
+  }
+}
+
+.similarRepo {
   margin-top: 10%;
 }
 
-.similarSketch h5 {
-  margin-bottom: 3%;
-}
-
-.sketchList {
-  padding: 1rem;
+.idealist {
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  overflow-x: scroll;
-  background-color: #f2f9f8;
-}
-
-.sketchBox {
-  margin-right: 2%;
-  width: 15%;
-  line-height: 3.5;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  background-color: white;
-  @include media('<medium') {
-    height: 90px;
-    width: 90px;
+  height: 250px;
+  > div {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding: 20px 5px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+  .moreRepository {
+    min-width: 240px;
+    font-size: 0.95rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    i {
+      margin-right: 0.5rem;
+    }
   }
 }
 
-.sketchHov {
-  opacity: 1;
-}
+.ideabox {
+  min-width: 240px;
+  height: 100%;
+  box-shadow: $shadow2dp;
+  .ideaimg {
+    position: relative;
+    background-color: white;
+    width: 240px;
+    height: 100%;
+    z-index: 0;
+  }
+  .ideahov {
+    position: relative;
+    top: -193px;
+    width: 240px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    z-index: 1;
+    .idealabel {
+      background-color: $gray;
+      height: 3.4rem;
+      padding: 1rem;
 
-.sketchHov:hover {
-  opacity: 1;
-  background-color: #99bddc;
+      .title {
+        font-weight: 400;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        word-wrap: normal;
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        opacity: 1;
+        overflow: hidden;
+        top: 0;
+        transition: all 300ms;
+      }
+      .options {
+        justify-content: space-around;
+        display: flex;
+        position: relative;
+        opacity: 0;
+        top: 0;
+        transition: all 300ms;
+        .box {
+          background-color: gray;
+          border-radius: 5px;
+          color: white;
+        }
+        a {
+          color: gray;
+          font-weight: 500;
+          display: inline-block;
+          padding: 0.5rem 1.5rem;
+        }
+      }
+    }
+    &:hover {
+      .title {
+        opacity: 0;
+        top: -1rem;
+      }
+      .options {
+        opacity: 1;
+        top: -2rem;
+      }
+    }
+  }
 }
-.sketchHov .hovlink {
-  color: white;
-}
-.sketchHov .hovlink:hover {
-  text-decoration: none;
-  color: #c5e6ef;
-}
-.sketchImg {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+.ideabox + .ideabox {
+  margin-left: 20px;
 }
