--- a/src/components/repository/Setting/Setting.module.scss
+++ b/src/components/repository/Setting/Setting.module.scss
@@ -34,6 +34,10 @@
   hr {
     border-color: $gray;
   }
+
+  .input + .input {
+    margin-top: 2rem;
+  }
   label {
     height: 100%;
     display: block;
