--- a/src/components/user/Header/Header.module.scss
+++ b/src/components/user/Header/Header.module.scss
@@ -60,6 +60,8 @@ $navHeight: 60px;
 }
 
 .userDescWrapper {
+  display: flex;
+  flex-direction: column;
   flex: 1;
   margin: 0 $descSpace;
   padding-top: $image_maxsize - $backIMGHeight;
@@ -75,7 +77,6 @@ $navHeight: 60px;
   }
 }
 .userProfileName {
-  margin-bottom: 0.5rem;
   font-size: 2rem;
   color: black;
   @include media('<medium') {
@@ -137,11 +138,17 @@ $navHeight: 60px;
 }
 .userNav {
   left: $image_maxsize;
-  display: flex;
-  width: 500px;
+  > div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    overflow-x: auto;
+  }
+  width: 600px;
   height: 100%;
   font-size: 1.1rem;
-  justify-content: space-between;
   padding-left: $descSpace;
   @include media('<medium') {
     max-width: 100%;
@@ -157,20 +164,13 @@ $navHeight: 60px;
     color: black;
 
     line-height: $navHeight;
-    height: 100;
+    height: 100%;
 
     padding: 0 0.7rem;
     &:hover {
       color: black;
       text-decoration: none;
       border-bottom: 3px solid darken($gray, 20%);
-    }
-    @include media('<medium') {
-      max-width: 150px;
-      min-width: 30px;
-    }
-    @media (max-width: 325px) {
-      padding: 0 0.1rem;
     }
   }
   a + a {
