--- a/src/components/group/Header/Header.module.scss
+++ b/src/components/group/Header/Header.module.scss
@@ -1,123 +1,77 @@
 @import '~styles/utils.scss';
 
-$image_maxsize: 200px;
-$backIMGHeight: 175px;
-$descSpace: 35px;
-$navHeight: 60px;
+$headerHeight: 180px;
+$navHeight: 40px;
 
-.backgroundImg {
-  background-color: rgb(238, 238, 238);
+.groupHeader {
   width: 100%;
-  height: $backIMGHeight;
-  position: absolute;
-  transition: background-color 100ms linear 0s;
-  opacity: 0.5;
-}
-.userHeader {
-  width: $app_width;
-  height: $backIMGHeight;
-  display: flex;
-  margin: 0 auto;
-  > a {
-    margin-top: $image_maxsize - $backIMGHeight;
-    button {
-      border-radius: 50px;
-    }
-  }
-}
-.userProfileImg {
-  position: relative;
-  z-index: 990;
-  top: $image_maxsize - $backIMGHeight;
-  width: 200px;
-  height: 200px;
-  .userImage {
-    border-radius: 1rem;
-    box-shadow: $shadow2dp;
-    background-color: $gray;
-    width: 100%;
-    height: 100%;
-  }
-}
+  background-color: lighten($gray, 10%);
+  border-bottom: 1px solid $gray;
 
-.userDescWrapper {
-  flex: 1;
-  margin: 0 $descSpace;
-  padding-top: $image_maxsize - $backIMGHeight;
-  z-index: 10;
-}
-.userProfileName {
-  margin-bottom: 0.5rem;
-  a {
-    font-size: 2rem;
-    color: black;
-    &:hover {
-      text-decoration: none;
-      color: black;
-    }
-  }
-}
-.userDescription {
-  font-size: 1.1rem;
-}
-.userNavWrapper {
-  position: sticky;
-  z-index: 900;
-  top: 0;
-  width: 100%;
-  height: $navHeight;
-  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.1);
-
-  background-color: white;
   > div {
+    max-width: $app_width / 1.5;
+    height: $headerHeight;
     display: flex;
+    flex-direction: column;
     margin: 0 auto;
-    width: $app_width;
-    height: 100%;
+    @include media('<medium') {
+      max-width: 90%;
+    }
   }
 }
-.profile {
-  width: $image_maxsize;
-  height: 100%;
+
+.groupTitle {
+  flex: 1;
   display: flex;
   align-items: center;
-  transition: all 500ms;
-  .userProfileImg {
-    position: inherit;
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
-    .userImage {
-      border-radius: 3px;
-      box-shadow: none;
-      border: 1px solid $gray;
+  font-size: 1.2rem;
+
+  .emblem {
+    max-width: 100px;
+    width: 100px;
+    height: 100px;
+    background-color: gray;
+    border-radius: 0.7rem;
+    @include media('<medium') {
+      width: 60px;
+      height: 60px;
+      border-radius: 0.3rem;
     }
   }
   .name {
-    font-weight: 500;
+    font-size: 3rem;
+  }
+  div + div {
+    margin-left: 1rem;
   }
 }
-.userNav {
-  left: $image_maxsize;
+.groupNavWrapper {
+  position: sticky;
+  z-index: 900;
+  width: 100%;
+  height: $navHeight;
+}
+.groupNav {
   display: flex;
-  width: 500px;
+  width: 100%;
   height: 100%;
-  font-size: 1.1rem;
-  padding-left: $descSpace;
+  font-size: 0.9rem;
   a {
     color: black;
-
-    line-height: $navHeight;
-    height: 100;
-
-    padding: 0 1rem;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border: 1px solid $gray;
+    height: 100%;
+    position: relative;
+    top: 1px;
     &:hover {
       color: black;
       text-decoration: none;
-      border-bottom: 3px solid darken($gray, 20%);
     }
   }
-  a + a {
-    margin-left: 1rem;
+  a div {
+    line-height: $navHeight;
+    height: 100;
+    margin: 0 1rem;
   }
 }
