--- a/src/components/group/Repositories/Repositories.module.scss
+++ b/src/components/group/Repositories/Repositories.module.scss
@@ -1,17 +1,33 @@
 @import '~styles/utils.scss';
-.repositories {
+
+.repositoriesWrapper {
   display: flex;
+  @include media('<medium') {
+    display: block;
+    margin-top: 5%;
+  }
+}
+
+.repositories {
+  flex: 1;
 }
 
 .repoCategory {
   width: 300px;
   margin-right: 5%;
+  font-size: 1.2rem;
+  @include media('<medium') {
+    margin-bottom: 10%;
+  }
   > div {
     width: 100%;
     height: 3rem;
     border-bottom: 2px solid $gray;
     margin-bottom: 1.5rem;
     padding-left: 0.5rem;
+    @include media('<medium') {
+      border-bottom: 1px solid $gray;
+    }
   }
   ul {
     padding: 0;
@@ -20,6 +36,17 @@
   }
   li {
     margin: 0.3rem 0;
+    padding: 0.3rem;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    &:hover {
+      background-color: lighten($gray, 10%);
+    }
+    .count {
+      font-size: 0.75rem;
+      margin-left: 0.3rem;
+    }
   }
 }
 .search {
@@ -28,6 +55,10 @@
   width: 100%;
   height: 3rem;
   margin-bottom: 2rem;
+  @include media('<medium') {
+    margin-bottom: 1rem;
+    height: 2rem;
+  }
   input {
     margin: 0 2rem;
     flex: 1;
@@ -36,11 +67,17 @@
     background-color: lighten($gray, 10%);
     padding: 0 0.5rem;
     width: 20rem;
+    @include media('<medium') {
+      margin: 0;
+    }
   }
   button {
     margin: 0;
     height: 100%;
     padding: 0 2rem;
     border-radius: 5px;
+    @include media('<medium') {
+      display: none;
+    }
   }
 }
