--- a/src/components/base/Card/Group/Group.module.scss
+++ b/src/components/base/Card/Group/Group.module.scss
@@ -44,8 +44,12 @@
   .followerImg {
     width: 4rem;
     height: 4rem;
-    border-radius: 0.5rem;
-    background-color: lightgray;
+    background-color: transparent;
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 0.5rem;
+    }
     @include media('<medium') {
       width: 3.5rem;
       height: 3.5rem;
