--- a/src/components/base/Card/Repository/Repository.module.scss
+++ b/src/components/base/Card/Repository/Repository.module.scss
@@ -16,7 +16,11 @@
   .image {
     width: 15rem;
     height: 11.3rem;
-    background-color: lightgray;
+    background-color: transparent;
+    img {
+      width: 100%;
+      height: 100%;
+    }
     @include media('<medium') {
       margin-left: 10%;
       max-width: 100px;
