--- a/src/components/group/Header/Header.module.scss
+++ b/src/components/group/Header/Header.module.scss
@@ -1,6 +1,5 @@
 @import '~styles/utils.scss';
 
-$headerHeight: 180px;
 $navHeight: 40px;
 
 .groupHeader {
@@ -10,7 +9,6 @@ $navHeight: 40px;
 
   > div {
     max-width: $app_width / 1.5;
-    height: $headerHeight;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -22,16 +20,20 @@ $navHeight: 40px;
 
 .groupTitle {
   flex: 1;
+  height: 150px;
+  margin-top: 25px;
   display: flex;
-  align-items: center;
   font-size: 1.2rem;
 
   .emblem {
-    max-width: 100px;
-    width: 100px;
-    height: 100px;
-    background-color: gray;
-    border-radius: 0.7rem;
+    width: 125px;
+    height: 125px;
+    background-color: transparent;
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 0.7rem;
+    }
     @include media('<medium') {
       width: 60px;
       height: 60px;
@@ -39,9 +41,13 @@ $navHeight: 40px;
     }
   }
   .name {
-    font-size: 3rem;
+    font-size: 2rem;
+    font-weight: 400;
   }
-  div + div {
+  .intro {
+    margin-top: 0.5rem;
+  }
+  > div + div {
     margin-left: 1rem;
   }
 }
