--- a/src/components/group/Repositories/Repositories.module.scss
+++ b/src/components/group/Repositories/Repositories.module.scss
@@ -1,5 +1,7 @@
 @import '~styles/utils.scss';
 
+$searchHeight: 2.5rem;
+
 .repositoriesWrapper {
   display: flex;
   @include media('<medium') {
@@ -11,58 +13,22 @@
 .repositories {
   flex: 1;
 }
-
-.repoCategory {
-  width: 300px;
-  margin-right: 5%;
-  font-size: 1.2rem;
-  @include media('<medium') {
-    margin-bottom: 10%;
-  }
-  > div {
-    width: 100%;
-    height: 3rem;
-    border-bottom: 2px solid $gray;
-    margin-bottom: 1.5rem;
-    padding-left: 0.5rem;
-    @include media('<medium') {
-      border-bottom: 1px solid $gray;
-    }
-  }
-  ul {
-    padding: 0;
-    padding-left: 0.5rem;
-    list-style-type: none;
-  }
-  li {
-    margin: 0.3rem 0;
-    padding: 0.3rem;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    &:hover {
-      background-color: lighten($gray, 10%);
-    }
-    .count {
-      font-size: 0.75rem;
-      margin-left: 0.3rem;
-    }
-  }
-}
 .search {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  height: 3rem;
+  height: $searchHeight;
   margin-bottom: 2rem;
   @include media('<medium') {
     margin-bottom: 1rem;
-    height: 2rem;
+  }
+  > a {
+    margin-right: 2rem;
   }
   input {
-    margin: 0 2rem;
     flex: 1;
     border-radius: 0.2rem;
+    margin-right: 2rem;
     border: 1px solid lightgray;
     background-color: lighten($gray, 10%);
     padding: 0 0.5rem;
@@ -70,6 +36,10 @@
     @include media('<medium') {
       margin: 0;
     }
+  }
+  select {
+    width: 120px;
+    height: $searchHeight;
   }
   button {
     margin: 0;
