--- a/src/components/main/Repository/Repository.module.scss
+++ b/src/components/main/Repository/Repository.module.scss
@@ -41,22 +41,15 @@
     }
   }
   input {
-    max-width: 60%;
-    min-width: 200px;
-    margin-right: 6%;
-    @media (max-width: 1192px) {
-      margin-right: 3%;
-    }
-    @media (max-width: 984px) {
-      margin-right: 0.5%;
-    }
+    flex: 1;
+    margin-right: 3%;
+  }
+  .filter {
+    display: inline;
+    width: 120px;
+    margin-right: 3%;
     @include media('<medium') {
-      max-width: 60%;
-      margin-right: 6%;
-      min-width: 150px;
-    }
-    @media (max-width: 325px) {
-      min-width: 100px;
+      display: none;
     }
   }
   span {
@@ -118,6 +111,10 @@
     width: 240px;
     height: 100%;
     z-index: 0;
+    img {
+      width: 100%;
+      height: calc(100% - 3.4rem);
+    }
   }
   .ideahov {
     position: relative;
