--- a/src/components/repository/Overview/Overview.module.scss
+++ b/src/components/repository/Overview/Overview.module.scss
@@ -52,10 +52,13 @@
   width: 100%;
   height: 400px;
   text-align: end;
+  img {
+    width: 100%;
+    height: 100%;
+  }
   a {
     position: relative;
-    left: 0;
-    bottom: 0;
+    top: -100%;
   }
   button {
     color: white !important;
